# jakal-hwpx

./: .gitattributes  .gitignore  2026_오르비_보고서_타치바나미카리_완성.hwpx  AI와_특이점_보고서.hwpx  HANCOM_DAMAGE_RESEARCH.md  HWPX_MODULE.ko.md  HWPX_MODULE.md  LICENSE  MANIFEST.in  README.ko.md  README.md  RELEASING.md  STABILITY_CONTRACT.md  THIRD_PARTY_NOTICES.md  [별지 1] 사회보장급여 신청(변경)서(사회보장급여 관련 공통서식에 관한 고시).hwpx  [별지 1] 사회보장급여 신청(변경)서(사회보장급여 관련 공통서식에 관한 고시)_가상사례추가.hwpx  [별지 1] 사회보장급여 신청(변경)서(사회보장급여 관련 공통서식에 관한 고시)_가상홍보용.hwpx  [양식] 2026_오르비_보고서.hwpx  [양식] 2026_졸업논문연구 양식 (1).hwpx  ole_test.hwpx  pyproject.toml  social_welfare_example_kim_haneul.hwpx  stability_contract.json  tmp_pagebreak_test.hwpx  tox.ini  기출킬러양식.hwpx  빈 문서 1.hwpx  생실_계획서_albumin_제외_수정본.hwpx  생실_계획서_albumin_제외_수정본_repaired.hwpx  수능치는아랴양_고닉_특성분석_졸업논문형.hwpx  수능치는아랴양_고닉_특성분석_졸업논문형_손상수정.hwpx  수능치는아랴양_고닉_특성분석_졸업논문형_원문규정반영.hwpx  수능치는아랴양_고닉_특성분석_졸업논문형_원문양식재생성.hwpx  수능치는아랴양_고닉_특성분석_졸업논문형_형식개선.hwpx  예시.hwpx  평가원 수학 양식 (2).hwpx
.github/workflows/: ci.yml  publish.yml
debug sample/: arya_report_safe3.hwpx
docs/: README.md  bridge-and-binary.md  hancom-document.md  hwp-document.md  hwp2py.md  hwpx-document.md  hwpx2py.md
examples/: SHOWCASE.md  build_promo_bundle.py  build_showcase_bundle.py
examples/output/: showcase_equation.hwpx  showcase_layout_headers.hwpx  showcase_manifest.json  showcase_numbering.hwpx  showcase_report.md  showcase_shapes.hwpx
examples/output_bridge_stability_lab/: stability_report.json
examples/output_bridge_stability_lab/from_hwp_dispatch_save_hwpx/: dispatch.hwpx
examples/output_bridge_stability_lab/from_hwp_save_hwpx_after_metadata_edit/: edited.hwpx
examples/output_bridge_stability_lab/from_hwpx_append_equation_save_hwp/: equation_modified.hwp
examples/output_bridge_stability_lab/from_hwpx_append_field_save_hwp/: field_modified.hwp  field_modified.hwp.bridge.json  field_modified_roundtrip.hwpx  hancom-dialog-log.run.json
examples/output_bridge_stability_lab/from_hwpx_append_hyperlink_save_hwp/: hancom-dialog-log.run.json  hyperlink_modified.hwp  hyperlink_modified_roundtrip.hwpx
examples/output_bridge_stability_lab/from_hwpx_append_paragraph_save_hwp/: hancom-dialog-log.run.json  (+1 more)
examples/output_hwp_stability_lab/: stability_report.json
examples/output_smoke/: showcase_fields_references.hwpx  showcase_layout_headers.hwpx  showcase_manifest.json  showcase_notes.hwpx  showcase_report.md  showcase_shapes.hwpx  showcase_table_picture.hwpx
examples/promo/: README.md
examples/samples/: README.md
hwpx_collection/: CLIKC8433486198790825_attach_1.hwpx  doc_3bfev6847=83v7d=49v9d=8av92=f7acv66c1v0977_v7566.hwpx  doc_6127v360e=21vcf=49v61=a1v31=b518v0a5evb845_v9589.hwpx  doc_8713v3a8b=23v9e=4av07=85v3e=cfafvbb7dv2ad9_v4607.hwpx  hard example.hwpx  mock_exam_1_10 after.hwpx  mock_exam_before.hwpx
scripts/: audit_hwp_lossless_roundtrip.py  augment_sample_corpus.py  build-hwp-converter.ps1  build_hancom_shape_donors.ps1  build_hwp_pure_profile.py  build_native_control_samples.py  check_installed_package.py  check_release.py  collect-hwp-docs.ps1  diff_hwp_binary_details.py  diff_hwp_shape_subtree.py  extract_hwp_shape_templates.py  flatten-hwpx.ps1  probe_hancom_connectline_mapping.py  probe_hancom_equation_flags.py  probe_hancom_equation_mapping.py  probe_hancom_graphic_layout_flags.py  probe_hancom_picture_ole_mapping.py  probe_hancom_section0_layout_loss.py  probe_hancom_textart_actions.ps1  probe_hancom_textart_run_commands.ps1  probe_native_form_hwpx_schema.ps1  probe_native_memo_hwpx_schema.ps1  process-hwp-chunk.ps1  run_bridge_stability_lab.py  run_hancom_corpus_smoke_validation.ps1  run_hancom_smoke_validation.ps1  run_hwp_stability_lab.py  run_hwp_template_lab.py  run_stability_lab.py  setup_hancom_security_module.ps1
src/jakal_hwpx/: __init__.py  _bridge_stability_lab.py  _cfb_writer.py  _hancom.py  _hwp_stability_lab.py  _release_gate.py  _stability_lab.py  bridge.py  document.py  elements.py  exceptions.py  hancom_document.py  hwp2py.py  hwp_binary.py  hwp_collection.py  hwp_document.py  hwp_pure_profile.py  hwp_template_lab.py  hwpx2py.py  namespaces.py  parts.py  pdf.py  xmlnode.py
src/jakal_hwpx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bridge.py  test_bridge_stability_lab.py  test_document_model.py  test_extended_features.py  test_feature_editing.py  test_hancom_document.py  test_hancom_interop.py  test_hancom_model_verification.py  test_hwp2py.py  test_hwp_binary.py  test_hwp_collection.py  test_hwp_document.py  test_hwp_pure_profile.py  test_hwp_stability_lab.py  test_hwp_template_lab.py  test_hwpx2py.py  test_layout_preservation.py  test_pdf_bridge.py  test_release_contract.py  test_roundtrip_corpus.py  test_sample_corpus_coverage.py  test_showcase_bundle.py  test_stability_lab.py
website/: index.html
(+822 files in other folders)
