[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jakal-hwpx"
version = "0.1.0"
description = "Round-trip safe HWPX reader/editor/writer for Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = ["lxml>=5.0.0"]
keywords = ["hwpx", "hancom", "document", "xml", "library"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Word Processors",
]

[project.urls]
Homepage = "https://github.com/Ahnd6474/jakal-docs"
Source = "https://github.com/Ahnd6474/jakal-docs"
Issues = "https://github.com/Ahnd6474/jakal-docs/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "twine>=5.0"]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jakal_hwpx = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
