[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "jakal-hwpx"
version = "0.2.0"
description = "Round-trip safe HWPX reader/editor/writer for Python"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
authors = [{ name = "Ahnd6474" }]
dependencies = ["lxml>=5.0.0,<6", "olefile>=0.47,<1"]
keywords = ["hwpx", "hancom", "document", "xml", "library"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Word Processors",
]

[project.urls]
Homepage = "https://github.com/Ahnd6474/jakal-hwpx"
Source = "https://github.com/Ahnd6474/jakal-hwpx"
Issues = "https://github.com/Ahnd6474/jakal-hwpx/issues"
Documentation = "https://github.com/Ahnd6474/jakal-hwpx#readme"
Releases = "https://github.com/Ahnd6474/jakal-hwpx/releases"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "setuptools>=77", "tox>=4.0", "twine>=5.0"]
release = ["build>=1.2", "setuptools>=77", "twine>=5.0"]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jakal_hwpx = ["py.typed", "bundled_hwp_profile/*.hwp", "bundled_hwp_profile/profile.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
